# omni_parser

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: 文献review测试.xlsx
scripts/: debug_ocr.py  download_models.py  multi_agent_classify.py  run_demo.py  simple_test.py  test_full_pipeline.py  test_pagination.py  test_pagination_direct.py  test_pagination_selector.py  wanfang_classify.py  wanfang_download.py  wanfang_login.py  wanfang_search.py  wanfang_server.py
src/browser_agent/: __init__.py
src/browser_agent/agent/: __init__.py  configuration.py  graph.py  state.py  wrapper.py
src/browser_agent/core/: __init__.py  browser_controller.py  element_mapper.py  omni_parser.py
src/browser_agent/models/: __init__.py  action.py  observation.py  ui_element.py
src/browser_agent/nodes/: __init__.py  act.py  observe.py  parse.py  plan.py  verify.py
src/browser_agent/prompts/: __init__.py  planning_prompt.py  system_prompt.py  verification_prompt.py
src/browser_agent/tools/: __init__.py  definitions.py
src/browser_agent/utils/: __init__.py  image_utils.py  llm_utils.py  log_utils.py
static/: app.js  classify.html  classify.js  index.html  styles.css
